--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=Server
+security.jwt.key=securityKeyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+security.access-token-ttl-seconds=90
